sandbox-codebase/objects/mone__Mailchimp_Import__c/mone__Mailchimp_Import__c.object-meta.xml
<CustomObject>
    <description>Holds Data Wizard configuration details.</description>
    <label>Mailchimp Import</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailchimp Imports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>