sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Clear_Values__c.field-meta.xml
<CustomField>
    <fullName>mone__Clear_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clear blank values when updating Mailchcimp.</inlineHelpText>
    <label>Clear Values</label>
    <type>Checkbox</type>
</CustomField>