sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Expiry__c.field-meta.xml
<CustomField>
    <fullName>mone__Expiry__c</fullName>
    <inlineHelpText>The Data Wizard job will not run after this expire date.</inlineHelpText>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>