sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Filter_Archived__c.field-meta.xml
<CustomField>
    <fullName>mone__Filter_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Filter archived members from being added to Mailchimp.</inlineHelpText>
    <label>Filter Archived</label>
    <type>Checkbox</type>
</CustomField>