sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Import_Title__c.field-meta.xml
<CustomField>
    <fullName>mone__Import_Title__c</fullName>
    <label>Import Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>