sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Import_Type__c.field-meta.xml
<CustomField>
    <fullName>mone__Import_Type__c</fullName>
    <label>Import Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>report</fullName>
                <label>Report</label>
            </value>
            <value>
                <fullName>soql</fullName>
                <label>SOQL</label>
            </value>
            <value>
                <fullName>listview</fullName>
                <label>List View</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>