sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Job_Id__c</fullName>
    <description>Internal Salesforce Job Id,</description>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>