sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>