sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipName>Member_Imports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>