sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Mapping__c.field-meta.xml
<CustomField>
    <fullName>mone__Mapping__c</fullName>
    <label>Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>