sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Next_Run__c.field-meta.xml
<CustomField>
    <fullName>mone__Next_Run__c</fullName>
    <label>Next Run</label>
    <type>DateTime</type>
</CustomField>