sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Param__c.field-meta.xml
<CustomField>
    <fullName>mone__Param__c</fullName>
    <label>Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>