sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Replace_Tags__c.field-meta.xml
<CustomField>
    <fullName>mone__Replace_Tags__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, any tags supplied in the import will completely override any tags associated with existing Members in Mailchimp.</inlineHelpText>
    <label>Replace Tags</label>
    <type>Checkbox</type>
</CustomField>