sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Results__c.field-meta.xml
<CustomField>
    <fullName>mone__Results__c</fullName>
    <inlineHelpText>Internal field.</inlineHelpText>
    <label>Results JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>