sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Run_As__c.field-meta.xml
<CustomField>
    <fullName>mone__Run_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Running As</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduled_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>