sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>mone__Schedule_Frequency__c</fullName>
    <inlineHelpText>E.g. once, hourly etc.</inlineHelpText>
    <label>Schedule Frequency</label>
    <length>250</length>
    <type>Text</type>
</CustomField>