sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>mone__Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>once</fullName>
                <default>true</default>
                <label>Once Off</label>
            </value>
            <value>
                <fullName>scheduled</fullName>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>expired</fullName>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>