sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Scheduled_Days__c.field-meta.xml
<CustomField>
    <fullName>mone__Scheduled_Days__c</fullName>
    <label>Scheduled Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mon</fullName>
                <label>Mon</label>
            </value>
            <value>
                <fullName>tue</fullName>
                <label>Tue</label>
            </value>
            <value>
                <fullName>wed</fullName>
                <label>Wed</label>
            </value>
            <value>
                <fullName>thu</fullName>
                <label>Thu</label>
            </value>
            <value>
                <fullName>fri</fullName>
                <label>Fri</label>
            </value>
            <value>
                <fullName>sat</fullName>
                <label>Sat</label>
            </value>
            <value>
                <fullName>sun</fullName>
                <label>Sun</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>