sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>mone__Scheduled_Hours__c</fullName>
    <inlineHelpText>Run the import on the selected hours.</inlineHelpText>
    <label>Scheduled Hours</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01:00</fullName>
            </value>
            <value>
                <fullName>02:00</fullName>
            </value>
            <value>
                <fullName>03:00</fullName>
            </value>
            <value>
                <fullName>04:00</fullName>
            </value>
            <value>
                <fullName>05:00</fullName>
            </value>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
            <value>
                <fullName>20:00</fullName>
            </value>
            <value>
                <fullName>21:00</fullName>
            </value>
            <value>
                <fullName>22:00</fullName>
            </value>
            <value>
                <fullName>23:00</fullName>
            </value>
            <value>
                <fullName>00:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>