sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Selected_Groups__c.field-meta.xml
<CustomField>
    <fullName>mone__Selected_Groups__c</fullName>
    <description>JSON Object contains Mailchimp Group Ids. E.g. [&apos;8e4cec7338&apos;, &apos;879133366b&apos;, &apos;3295bf0bcd&apos;, &apos;8d4af72fa3&apos;]</description>
    <inlineHelpText>Internal use.</inlineHelpText>
    <label>Selected Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>