sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Selected_Tags__c.field-meta.xml
<CustomField>
    <fullName>mone__Selected_Tags__c</fullName>
    <description>JSON Object containing Mailchimp Tags to apply to the import. E.g. [{&quot;name&quot;:&quot;4886926&quot;,&quot;label&quot;:&quot;Member&quot;},{&quot;name&quot;:&quot;4886930&quot;,&quot;label&quot;:&quot;Customer&quot;}]</description>
    <inlineHelpText>Internal use.</inlineHelpText>
    <label>Selected Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>