sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__SOQL__c.field-meta.xml
<CustomField>
    <fullName>mone__SOQL__c</fullName>
    <label>SOQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>