sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Start_Run__c.field-meta.xml
<CustomField>
    <fullName>mone__Start_Run__c</fullName>
    <label>Start Run</label>
    <type>DateTime</type>
</CustomField>