sandbox-codebase/objects/mone__Mailchimp_Import__c/fields/mone__Status__c.field-meta.xml
<CustomField>
    <fullName>mone__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>running</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>waiting</fullName>
            </value>
            <value>
                <fullName>updating</fullName>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>report too Large</fullName>
            </value>
            <value>
                <fullName>inactive User</fullName>
            </value>
            <value>
                <fullName>preparing</fullName>
            </value>
            <value>
                <fullName>paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>