sandbox-codebase/objects/mone__Mailchimp_Import__c/listViews/mone__All.listView-meta.xml
<ListView>
    <fullName>mone__All</fullName>
    <columns>mone__Job_Id__c</columns>
    <columns>NAME</columns>
    <columns>mone__Import_Type__c</columns>
    <columns>mone__Schedule_Type__c</columns>
    <columns>mone__Run_As__c</columns>
    <columns>mone__Results__c</columns>
    <columns>mone__SOQL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>